# TinyServer

./: README.md  readme.md
client/fileclient/: CMakeLists.txt  main.cpp
client/src/: CMakeLists.txt  main.cpp
client/src/net/: Communicator.cpp  Communicator.h
client/tlvclient/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  build.sh  main.cpp  mainfileserver.cpp  mainhttpserver.cpp  maintlvmsg.cpp
src/app/: TlvCommunicator.cpp  TlvCommunicator.h
src/app/file/: FileChannel.cpp  FileChannel.h  FileServer.cpp  FileServer.h
src/app/http/: HttpChannel.cpp  HttpChannel.h  HttpCommunicator.cpp  HttpCommunicator.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpServerInfo.h
src/app/tlvmsg/: TlvChannel.cpp  TlvChannel.h  TlvCommunicator.cpp  TlvCommunicator.h  TlvServe.cpp  TlvServer.h
src/commom/: Logger.cpp  Logger.h  Msg.cpp  Msg.h  RawMsgManager.cpp  RawMsgManager.h  TagTimer.cpp  TagTimer.h  ThreadPool.h
src/kernel/: App.cpp  App.h  Channel.cpp  Channel.h  Communicator.cpp  Communicator.h  ConnectManage.h  NetIoManage.cpp  NetIoManage.h  NetIoWorker.cpp  NetIoWorker.h
src/resources/html/: index.html  video.html
src/server/: App.cpp  App.h  Communicator.cpp  Communicator.h  ConnectManage.cpp  ConnectManage.h  NetIoManage.cpp  NetIoManage.h  NetIoWorker.cpp  NetIoWorker.h
webbench-1.5/: Makefile  note.md  socket.c  webbench  webbench.c
